# proan-hidrocarburos

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml
ConsultasBigQuery/: HCARB_estatus_sat_schema.sql  HCARB_gold_aprobacion_schema.sql  HCARB_gold_clasificacion.sql  HCARB_gold_validacion_sap.sql  HCARB_stg_vendors.sql  README.md  flujo-aprobacion.mmd  flujo-estatus-sat.mmd  linaje-tablas.mmd
apps/financialbi/: Dockerfile  pyproject.toml  test_ebitda_sign.py
apps/financialbi/financialbi/: agente.py  alertas_engine.py  app.py  aprobacion_engine.py  dashboard_engine.py  db.py  estatus_sat.py  hidrocarburos_engine.py  materialize_alerts.py  report_engine.py
apps/frontend/: Dockerfile  Dockerfile.prod  README.md  client.config.ts  next.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
apps/frontend/app/: layout.tsx  page.tsx
apps/frontend/app/(authenticated)/: layout.tsx
apps/frontend/app/(authenticated)/alerts/: page.tsx
apps/frontend/app/(authenticated)/aprobacion/: page.tsx
apps/frontend/app/(authenticated)/compras/: page.tsx
apps/frontend/app/(authenticated)/dashboard/: page.tsx
apps/frontend/app/(authenticated)/hidrocarburos/: page.tsx
apps/frontend/app/(authenticated)/report/: page.tsx
apps/frontend/app/api/auth/login/: route.ts
apps/frontend/app/api/auth/logout/: route.ts
apps/frontend/app/api/financialbi/alerts/: route.ts
apps/frontend/app/api/financialbi/alerts_mtd/: route.ts
apps/frontend/app/api/financialbi/catalog/: route.ts
apps/frontend/app/login/: page.tsx
apps/frontend/src/components/: confirm-dialog.tsx  document-viewer-modal.tsx  login-form.tsx  logout-button.tsx  pdf-linked-message.tsx  pdf-viewer-modal.tsx  profile-panel.tsx
apps/frontend/src/features/agent/: chatbi-data-modal.tsx  plotly-chart.tsx
apps/frontend/src/features/alerts/: alerts-workspace.tsx
apps/frontend/src/features/aprobacion/: aprobacion-workspace.tsx
apps/frontend/src/features/dashboard/: dashboard-workspace.tsx
apps/frontend/src/features/hidrocarburos/: hidrocarburos-workspace.tsx
apps/frontend/src/features/report/: report-workspace.tsx
apps/frontend/src/lib/: env.ts  gateway.ts
apps/frontend/src/lib/auth/: jwt.ts  session.ts
apps/frontend/src/skin/: index.ts
apps/frontend/src/types/: aprobacion.ts  auth.ts  dashboard.ts  financialbi.ts  gateway.ts  hidrocarburos.ts  plotly-modules.d.ts
config/: financialbi.env
deploy/: docker-compose.dev.yml  docker-compose.prod.yml
deploy/nginx/: .htpasswd.example  nginx.dev.conf  nginx.prod.conf
deploy/nginx/ssl/: .gitkeep
scripts/: htpasswd.mjs
(+15 files in other folders)
