[project]
name = "financialbi"
version = "0.1.0"
description = "Hidrocarburos — FastAPI service: clasificación, validación SAP y aprobación de facturas de gas"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.9",
    "uvicorn[standard]==0.34.3",
    "pydantic==2.11.5",
    "pandas==2.2.3",
    "numpy==2.2.6",
    # pymssql (backend Azure SQL) eliminado: Hidrocarburos usa solo BigQuery.
    # Si algún día se necesita el backend azure, reañadir "pymssql>=2.2.11".
    "google-cloud-bigquery>=3.25.0",
    "db-dtypes>=1.2.0",
    "google-auth>=2.0",
    # Llamada SOAP al webservice público del SAT (D24, estatus_sat.py) -- un
    # POST XML puntual no justifica una librería SOAP completa como zeep.
    "requests>=2.31",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["financialbi"]
